plugins {
    id 'com.android.application'
}

android {
    lintOptions {
        abortOnError false
    }
    compileSdk 31
    packagingOptions {
        resources.excludes.add("META-INF/*")
    }
    defaultConfig {
        applicationId "com.zalexdev.stryker"
        minSdk 23
        targetSdk 28
        versionCode 23
        versionName "2.0 Release"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.github.cachapa:ExpandableLayout:2.9.2'
    implementation 'com.airbnb.android:lottie:4.2.0'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    implementation 'com.github.seancfoley:ipaddress:5.3.3'
    implementation 'org.jsoup:jsoup:1.13.1'
    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
    implementation 'jcifs:jcifs:1.3.17'
    implementation 'commons-net:commons-net:3.8.0'
    implementation 'org.osmdroid:osmdroid-android:6.1.10'
}